# gnucash

gnucash/gnome/: CMakeLists.txt  dialog-tax-info-editor.c  gnc-plugin-basic-commands.c
gnucash/gnome-utils/: dialog-account.c  dialog-tax-table.c  dialog-tax-table.h  gnc-splash.c  gnc-ui.h  gnome-utils.i
gnucash/gtkbuilder/: CMakeLists.txt  dialog-account.glade  dialog-tax-info-editor-TaxCountries.glade  dialog-tax-info-editor-de_DE-Einkommensteuer.glade  dialog-tax-info-editor-de_DE-EinkommensteuerAnlageAV.glade  dialog-tax-info-editor-de_DE-EinkommensteuerAnlageN-Ehefrau.glade  dialog-tax-info-editor-de_DE-EinkommensteuerAnlageN-StpflEhemann.glade  dialog-tax-info-editor-de_DE-EinkommensteuerAnlageV.glade  dialog-tax-info-editor-de_DE-EinkommensteuerAnlageVorsorge.glade  dialog-tax-info-editor-de_DE-EinkommensteuerMantelbogen.glade  dialog-tax-info-editor-de_DE-TaxTypes.glade  dialog-tax-info-editor-de_DE-TaxYears.glade  dialog-tax-info-editor-x_X-PrivateTax.glade  dialog-tax-info-editor-x_X-PrivateTaxForm1.glade  dialog-tax-info-editor-x_X-TaxTypes.glade  dialog-tax-info-editor-x_X-TaxYears.glade  dialog-tax-info-editor.glade
gnucash/report/report-system/: CMakeLists.txt  html-chart.scm  html-document.scm  report-system.scm  report-utilities.scm
gnucash/report/report-system/test/: CMakeLists.txt  test-report-chart.scm
gnucash/report/standard-reports/: CMakeLists.txt  account-piecharts-upgraded.scm  account-piecharts.scm  asset-performance.scm  net-charts-upgraded.scm  price-scatter-upgraded.scm  tax-info.scm
gnucash/report/standard-reports/test/: CMakeLists.txt  test-asset-performance.scm
gnucash/report/utility-reports/: test-graphing.scm
gnucash/ui/: gnc-plugin-basic-commands-ui.xml
libgnucash/app-utils/: gnc-ui-util.c
